--- a/css/lb_style.css
+++ b/css/lb_style.css
@@ -248,8 +248,10 @@ strong {
 @media screen and (max-width: 900px) {
   .logoSection {
     background: #000;
-    background: -webkit-linear-gradient(bottom, rgba(255, 0, 0, 0), black);
-    background: linear-gradient(to top, rgba(255, 0, 0, 0), black);
+    background: -moz-linear-gradient(top, black 0%, rgba(0, 0, 0, 0) 100%);
+    background: -webkit-linear-gradient(top, black 0%, rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(to bottom, black 0%, rgba(0, 0, 0, 0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#00000000',GradientType=0 );
     text-align: center;
     height: 100vh; } }
 .site-content {
