--- a/sass/_nav.sass
+++ b/sass/_nav.sass
@@ -168,8 +168,11 @@
 @media screen and (max-width: $breakmin)
 	.logoSection
 		background: #000
-		background: -webkit-linear-gradient(bottom,  rgba(255,0,0,0), rgba(0,0,0,1)) 
-		background: linear-gradient(to top, rgba(255,0,0,0), rgba(0,0,0,1))
+		background: -moz-linear-gradient(top,  rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%)
+		background: -webkit-linear-gradient(top,  rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%)
+		background: linear-gradient(to bottom,  rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%)
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#00000000',GradientType=0 )
+
 		text-align: center
 		height: 100vh
 
